--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -2,8 +2,8 @@
 
 @font-face {
   font-family: 'z-ui-icons'; /* Project id 395311 */
-  src: url('./fonts/iconfont.woff2') format('woff2'),
-    url('./fonts/iconfont.woff') format('woff'),
+  src: url('./fonts/iconfont.woff') format('woff'),
+    url('./fonts/iconfont.woff2') format('woff2'),
     url('./fonts/iconfont.ttf') format('truetype');
 }
 
